--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -19,6 +19,25 @@
     android:layout_alignParentRight="true"
     android:background="@drawable/messageboxright"
 >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/username"
+        android:text="@string/Username"
+        android:layout_marginTop="5sp"
+        android:layout_above="@+id/showmessage"
+        android:layout_marginStart="20sp"
+        android:layout_centerVertical="true"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        android:layout_alignParentStart="true"
+
+        />
+
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
