--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#193C58</color>
-    <color name="colorPrimaryDark">#132A3C</color>
+    <color name="colorPrimaryDark">#2A537E</color>
     <color name="colorAccent">#2196F3</color>
 </resources>
