--- a/app/src/main/res/drawable/messageboxleft.xml
+++ b/app/src/main/res/drawable/messageboxleft.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#03A9F4" />
+    <solid android:color="#D1DBE2" />
     <corners android:topLeftRadius="5dp" android:radius="15dp" />
 </shape>
