--- a/app/src/main/res/drawable/messageboxright.xml
+++ b/app/src/main/res/drawable/messageboxright.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#E91E63" />
+    <solid android:color="#727B88" />
     <corners android:topLeftRadius="5dp" android:radius="15dp" />
 </shape>
