--- a/app/src/main/res/layout/activity_add_group.xml
+++ b/app/src/main/res/layout/activity_add_group.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddGroup">
-
-
-
 
 
     <LinearLayout
@@ -40,22 +37,14 @@
 
 
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerviewuserstoaddtogroup"
 
             android:layout_width="match_parent"
-            android:layout_height="300sp" />
+            android:layout_height="match_parent" />
 
 
-
-        <Button
-            android:id="@+id/addbtn"
-            android:layout_width="200sp"
-            android:layout_height="80sp"
-            android:layout_marginTop="20sp"
-            android:layout_marginBottom="40sp"
-            android:text="@string/AddGroup"
-            tools:ignore="MissingConstraints"></Button>
 
 
 
@@ -68,7 +57,18 @@
 
 
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+
+        android:id="@+id/addbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="100sp"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_save_group"
+        android:layout_margin="16dp"
+        tools:ignore="MissingConstraints" />
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</FrameLayout>
