--- a/app/src/main/res/layout/activity_group_item.xml
+++ b/app/src/main/res/layout/activity_group_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="#545C54"
+    app:cardBackgroundColor="#416479"
     android:layout_margin="4sp"
     app:contentPadding="10sp"
     app:cardElevation="10sp"
@@ -28,12 +28,14 @@
 
             android:layout_marginTop="10sp"
             android:layout_marginStart="20sp"
-            android:src="@drawable/ic_imgprofile"
+            android:src="@drawable/ic_groupphoto"
 
             />
 
         <TextView
             android:id="@+id/groupname"
+            android:fontFamily="@font/novusbold"
+            android:textColor="#ffff"
             android:layout_marginTop="20sp"
             android:layout_marginStart="30sp"
             android:text="@string/Groupname"
@@ -43,6 +45,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:ignore="MissingConstraints" />
+
+
+
 
     </LinearLayout>
 
