--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,18 +20,20 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image"
-            android:layout_width="40sp"
-            android:layout_height="40sp"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
             app:civ_border_width="2sp"
-            android:layout_marginTop="60sp"
+            android:layout_marginTop="90sp"
             android:layout_marginStart="20sp"
             />
 
     <TextView
         android:id="@+id/username"
-        android:layout_marginTop="60sp"
+        android:layout_marginTop="100sp"
         android:layout_marginStart="140sp"
         android:text="@string/Username"
+        android:fontFamily="@font/novusbold"
+        android:textColor="#fff"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="25sp"
