--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,20 @@
     <Button
         android:id="@+id/registerbtn"
         android:text="@string/Rigister"
+        android:background="@drawable/buttonshape"
         android:layout_width="200sp"
-        android:layout_height="80sp"
+        android:layout_height="50sp"
+        android:layout_marginBottom="20sp"
+
         tools:ignore="MissingConstraints"></Button>
 
     <Button
         android:id="@+id/loginbtn"
         android:text="@string/Login"
+        android:background="@drawable/buttonshape"
         android:layout_width="200sp"
-        android:layout_height="80sp"
+
+        android:layout_height="50sp"
         tools:ignore="MissingConstraints"></Button>
 
 </LinearLayout>
