--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -21,17 +21,19 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_imagemessage"
-            android:layout_width="40sp"
-            android:layout_height="40sp"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
             app:civ_border_width="2sp"
             android:layout_marginStart="70sp"
-            android:layout_marginTop="15sp"
+            android:layout_marginTop="50sp"
             />
 
     <TextView
         android:id="@+id/username"
-        android:layout_marginTop="20sp"
+        android:layout_marginTop="60sp"
         android:layout_marginStart="140sp"
+        android:fontFamily="@font/novusbold"
+        android:textColor="#fff"
         android:text="@string/Username"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -41,22 +43,14 @@
         tools:ignore="MissingConstraints" />
 
 
-    <com.google.android.material.tabs.TabLayout
-        android:layout_below="@id/toolbar"
-        android:id="@+id/tabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        tools:ignore="MissingConstraints">
 
-    </com.google.android.material.tabs.TabLayout>
 
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerviewmessages"
             android:layout_below="@+id/tabLayout"
-            android:layout_marginTop="2sp"
+            android:layout_marginTop="150sp"
 
             android:layout_marginBottom="70sp"
             android:layout_width="match_parent"
