--- a/app/src/main/res/layout/activity_user_item.xml
+++ b/app/src/main/res/layout/activity_user_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="#545C54"
+    app:cardBackgroundColor="#416479"
     android:layout_margin="4sp"
     app:contentPadding="10sp"
     app:cardElevation="10sp"
@@ -35,6 +35,8 @@ android:layout_marginTop="10sp"
         android:id="@+id/username"
         android:layout_marginTop="20sp"
         android:layout_marginStart="30sp"
+        android:fontFamily="@font/novusbold"
+        android:textColor="@color/colorPrimary"
         android:text="@string/Username"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -43,6 +45,89 @@ android:layout_marginTop="10sp"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints" />
 
+
+        <ImageView
+            android:id="@+id/havemessage"
+            android:visibility="gone"
+            android:layout_marginTop="20sp"
+            android:layout_marginStart="120sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_havemessage"
+
+            />
+
+
+
     </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginTop="80sp"
+
+
+        android:layout_height="wrap_content">
+
+
+        <TextView
+            android:id="@+id/senderreciever"
+
+            android:text="@string/Lastmessage"
+
+            android:textColor="@color/colorPrimary"
+
+            android:visibility="gone"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/lastmessage"
+
+        android:textColor="@color/colorPrimary"
+        android:visibility="gone"
+        android:text="@string/Lastmessage"
+        android:ellipsize="end"
+        android:maxEms="5"
+        android:maxLines="1"
+        android:textAlignment="center"
+        android:layout_marginStart="5sp"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints" />
+
+
+
+        <TextView
+            android:id="@+id/lastmessagetime"
+
+            android:text="@string/Lastmessage"
+            android:textColor="#ffff"
+            android:visibility="gone"
+            android:textAlignment="center"
+            android:layout_marginStart="5sp"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:ignore="MissingConstraints" />
+
+
+    </LinearLayout>
+
+    <androidx.appcompat.widget.AppCompatCheckBox
+        android:id="@+id/checkbox"
+        android:layout_marginStart="200sp"
+        android:visibility="gone"
+        android:layout_width="100sp"
+        android:layout_height="100sp"/>
+
 
 </androidx.cardview.widget.CardView>
