--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -18,6 +18,11 @@
         android:background="@drawable/messageboxleft"
         >
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
 
 
     <TextView
@@ -25,6 +30,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/showmessage"
         android:text="@string/message"
+
         android:layout_marginTop="10sp"
         android:layout_marginStart="20sp"
         android:layout_centerVertical="true"
@@ -33,6 +39,56 @@
         android:layout_alignParentStart="true"
 
         />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/messagetime"
+            android:text="@string/messagetime"
+            android:layout_marginTop="10sp"
+            android:layout_marginStart="150sp"
+            android:layout_marginBottom="8sp"
+            android:layout_centerVertical="true"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            android:layout_alignParentStart="true"
+
+            />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/seen"
+                android:visibility="gone"
+                android:layout_marginStart="250sp"
+                android:layout_marginBottom="8sp"
+                android:layout_centerVertical="true"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:layout_alignParentStart="true"
+                android:src="@drawable/ic_seen"
+
+                />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/unseen"
+                android:visibility="gone"
+                android:layout_marginStart="250sp"
+                android:layout_marginBottom="8sp"
+                android:layout_centerVertical="true"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:layout_alignParentStart="true"
+                android:src="@drawable/ic_unseen"
+
+                />
+
+
+        </LinearLayout>
+
+
 
     </RelativeLayout>
 
