--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -26,7 +26,6 @@
         android:id="@+id/username"
         android:text="@string/Username"
         android:layout_marginTop="5sp"
-        android:layout_above="@+id/showmessage"
         android:layout_marginStart="20sp"
         android:layout_centerVertical="true"
         android:textSize="20sp"
@@ -36,7 +35,12 @@
 
         />
 
-
+    <LinearLayout
+        android:id="@+id/linearpink"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
 
     <TextView
         android:layout_width="wrap_content"
@@ -50,11 +54,67 @@
         android:layout_centerVertical="true"
         android:textSize="20sp"
         android:textStyle="bold"
-        >
+        />
 
-    </TextView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/messagetime"
+            android:text="@string/messagetime"
+            android:layout_marginTop="10sp"
+            android:layout_marginStart="150sp"
+            android:layout_marginBottom="8sp"
+            android:layout_centerVertical="true"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            android:layout_alignParentStart="true"
+
+            />
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/seen"
+            android:visibility="gone"
+            android:layout_marginStart="250sp"
+            android:layout_marginBottom="8sp"
+            android:layout_centerVertical="true"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:layout_alignParentStart="true"
+            android:src="@drawable/ic_seen"
+
+            />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/unseen"
+            android:visibility="gone"
+            android:layout_marginStart="250sp"
+            android:layout_marginBottom="8sp"
+            android:layout_centerVertical="true"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:layout_alignParentStart="true"
+            android:src="@drawable/ic_unseen"
+
+            />
+
+
+    </LinearLayout>
 
 
 </RelativeLayout>
+
+
+
+
+
+
+
+
+
 
 </RelativeLayout>
