--- a/app/src/main/res/layout/group_item_left.xml
+++ b/app/src/main/res/layout/group_item_left.xml
@@ -28,6 +28,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/username"
+            android:fontFamily="@font/novusbold"
+            android:textColor="@color/colorPrimary"
             android:text="@string/Username"
             android:layout_marginTop="5sp"
             android:layout_above="@+id/showmessage"
@@ -54,6 +56,22 @@
             android:layout_alignParentStart="true"
 
             />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/messagetime"
+                android:text="@string/messagetime"
+                android:layout_marginTop="10sp"
+                android:layout_marginStart="150sp"
+                android:layout_marginBottom="8sp"
+                android:layout_centerVertical="true"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:layout_alignParentStart="true"
+
+                />
 
         </LinearLayout>
 
