--- a/app/src/main/res/layout/activity_group_item.xml
+++ b/app/src/main/res/layout/activity_group_item.xml
@@ -51,4 +51,65 @@
 
     </LinearLayout>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginTop="80sp"
+
+
+        android:layout_height="wrap_content">
+
+
+        <TextView
+            android:id="@+id/senderreciever"
+
+            android:text="@string/Lastmessage"
+
+            android:textColor="@color/colorPrimary"
+
+            android:visibility="gone"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/lastmessage"
+
+            android:textColor="@color/colorPrimary"
+            android:visibility="gone"
+            android:text="@string/Lastmessage"
+            android:ellipsize="end"
+            android:maxEms="5"
+            android:maxLines="1"
+            android:textAlignment="center"
+            android:layout_marginStart="5sp"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:ignore="MissingConstraints" />
+
+
+
+        <TextView
+            android:id="@+id/lastmessagetime"
+
+            android:text="@string/Lastmessage"
+            android:textColor="#ffff"
+            android:visibility="gone"
+            android:textAlignment="center"
+            android:layout_marginStart="5sp"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:ignore="MissingConstraints" />
+
+
+    </LinearLayout>
+
 </androidx.cardview.widget.CardView>
