--- a/app/src/main/res/drawable-anydpi/ic_sendphotobtn.xml
+++ b/app/src/main/res/drawable-anydpi/ic_sendphotobtn.xml
@@ -3,12 +3,12 @@
     android:height="24dp"
     android:viewportWidth="19.2"
     android:viewportHeight="19.2"
-    android:tint="#FFFFFF"
+    android:tint="#000000"
     android:alpha="0.8">
   <group android:translateX="-2.4"
       android:translateY="-2.4">
       <path
           android:fillColor="#FF000000"
-          android:pathData="M20,4L4,4c-1.1,0 -1.99,0.9 -1.99,2L2,18c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2L22,6c0,-1.1 -0.9,-2 -2,-2zM20,8l-8,5 -8,-5L4,6l8,5 8,-5v2z"/>
+          android:pathData="M22,16L22,4c0,-1.1 -0.9,-2 -2,-2L8,2c-1.1,0 -2,0.9 -2,2v12c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2zM11,12l2.03,2.71L16,11l4,5L8,16l3,-4zM2,6v14c0,1.1 0.9,2 2,2h14v-2L4,20L4,6L2,6z"/>
   </group>
 </vector>
