--- a/app/src/main/res/layout/activity_group_item.xml
+++ b/app/src/main/res/layout/activity_group_item.xml
@@ -14,9 +14,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100sp">
-
-
+        android:padding="10sp"
+        android:layout_height="100sp"
+        android:orientation="horizontal"
+        android:layout_marginStart="20sp"
+        android:layout_marginTop="10sp"
+        >
 
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -26,8 +29,7 @@
             app:civ_border_width="2sp"
             android:layout_centerVertical="true"
 
-            android:layout_marginTop="10sp"
-            android:layout_marginStart="20sp"
+
             android:src="@drawable/ic_groupphoto"
 
             />
@@ -36,8 +38,8 @@
             android:id="@+id/groupname"
             android:fontFamily="@font/novusbold"
             android:textColor="#ffff"
-            android:layout_marginTop="20sp"
-            android:layout_marginStart="30sp"
+            android:layout_marginTop="10sp"
+            android:layout_marginStart="20sp"
             android:text="@string/Groupname"
             android:textAlignment="center"
             android:textStyle="bold"
@@ -47,9 +49,18 @@
             tools:ignore="MissingConstraints" />
 
 
-
-
     </LinearLayout>
+
+    <ImageView
+
+        android:id="@+id/havemessage"
+        android:visibility="gone"
+        android:layout_marginStart="280sp"
+        android:layout_marginTop="10sp"
+        android:layout_weight=".1"
+        android:layout_width="30sp"
+        android:layout_height="30sp"
+        android:src="@drawable/ic_havemessage" />
 
 
     <LinearLayout
