--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -11,13 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/activity_layout_bar"
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/activity_layout_bar"
 
-        >
+            >
 
-    </include>
+        </include>
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_imagemessage"
@@ -28,19 +28,19 @@
             android:layout_marginTop="50sp"
             />
 
-    <TextView
-        android:id="@+id/username"
-        android:layout_marginTop="60sp"
-        android:layout_marginStart="140sp"
-        android:fontFamily="@font/novusbold"
-        android:textColor="#fff"
-        android:text="@string/Username"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+        <TextView
+            android:id="@+id/username"
+            android:layout_marginTop="60sp"
+            android:layout_marginStart="140sp"
+            android:fontFamily="@font/novusbold"
+            android:textColor="#fff"
+            android:text="@string/Username"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:ignore="MissingConstraints" />
 
 
 
@@ -86,13 +86,25 @@
             android:background="#ffff"
             android:orientation="horizontal">
 
+            <Button
+                android:id="@+id/sendphotobtn"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+
+                android:layout_marginEnd="5sp"
+                android:background="@drawable/ic_sendphotobtn"
+
+
+                >
+
+            </Button>
 
 
             <EditText
                 android:id="@+id/typemessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight=".75"
+                android:layout_weight=".5"
                 android:background="@null"
                 android:hint="@string/TypeMessage"
                 android:textSize="20sp"/>
@@ -115,7 +127,7 @@
 
 
 
-</RelativeLayout>
+    </RelativeLayout>
 
 
 
