--- a/app/src/main/res/layout/activity_messages_group.xml
+++ b/app/src/main/res/layout/activity_messages_group.xml
@@ -43,22 +43,13 @@
             tools:ignore="MissingConstraints" />
 
 
-        <com.google.android.material.tabs.TabLayout
-            android:layout_below="@id/toolbar"
-            android:id="@+id/tabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            tools:ignore="MissingConstraints">
-
-        </com.google.android.material.tabs.TabLayout>
 
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerviewmessages"
             android:layout_below="@+id/tabLayout"
-            android:layout_marginTop="2sp"
+            android:layout_marginTop="150sp"
 
             android:layout_marginBottom="70sp"
             android:layout_width="match_parent"
@@ -92,7 +83,18 @@
             android:background="#ffff"
             android:orientation="horizontal">
 
+            <Button
+                android:id="@+id/sendphotobtn"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
 
+                android:layout_marginEnd="5sp"
+                android:background="@drawable/ic_sendphotobtn"
+
+
+                >
+
+            </Button>
 
             <EditText
                 android:id="@+id/typemessage"
