--- a/app/src/main/res/layout/activity_user_item.xml
+++ b/app/src/main/res/layout/activity_user_item.xml
@@ -13,7 +13,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100sp">
+        android:padding="10sp"
+        android:layout_height="100sp"
+        android:orientation="horizontal"
+        android:layout_marginStart="20sp"
+        android:layout_marginTop="10sp"
+        >
 
 
 
@@ -25,42 +30,45 @@
             app:civ_border_width="2sp"
             android:layout_centerVertical="true"
 
-android:layout_marginTop="10sp"
-            android:layout_marginStart="20sp"
+
+
             android:src="@drawable/ic_imgprofile"
 
             />
 
-    <TextView
-        android:id="@+id/username"
-        android:layout_marginTop="20sp"
-        android:layout_marginStart="30sp"
-        android:fontFamily="@font/novusbold"
-        android:textColor="@color/colorPrimary"
-        android:text="@string/Username"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+        <TextView
+            android:id="@+id/username"
+            android:layout_marginTop="10sp"
+            android:layout_marginStart="20sp"
 
-
-        <ImageView
-            android:id="@+id/havemessage"
-            android:visibility="gone"
-            android:layout_marginTop="20sp"
-            android:layout_marginStart="120sp"
+            android:fontFamily="@font/novusbold"
+            android:textColor="@color/colorPrimary"
+            android:text="@string/Username"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="25sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_havemessage"
+            tools:ignore="MissingConstraints" />
 
-            />
+
+
 
 
 
     </LinearLayout>
+    <ImageView
 
+        android:id="@+id/havemessage"
+        android:visibility="gone"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="280sp"
+        android:layout_weight=".1"
+        android:layout_width="30sp"
+        android:layout_height="30sp"
+        android:src="@drawable/ic_havemessage"
+
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -86,22 +94,22 @@ android:layout_marginTop="10sp"
             android:layout_height="wrap_content"
             tools:ignore="MissingConstraints" />
 
-    <TextView
-        android:id="@+id/lastmessage"
+        <TextView
+            android:id="@+id/lastmessage"
 
-        android:textColor="@color/colorPrimary"
-        android:visibility="gone"
-        android:text="@string/Lastmessage"
-        android:ellipsize="end"
-        android:maxEms="5"
-        android:maxLines="1"
-        android:textAlignment="center"
-        android:layout_marginStart="5sp"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+            android:textColor="@color/colorPrimary"
+            android:visibility="gone"
+            android:text="@string/Lastmessage"
+            android:ellipsize="end"
+            android:maxEms="5"
+            android:maxLines="1"
+            android:textAlignment="center"
+            android:layout_marginStart="5sp"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:ignore="MissingConstraints" />
 
 
 
