--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -12,101 +12,114 @@
 
 
 
-<RelativeLayout
-    android:layout_width="300sp"
-    android:layout_height="wrap_content"
-    android:layout_alignParentEnd="true"
-    android:layout_alignParentRight="true"
-    android:background="@drawable/messageboxright"
->
-
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="300sp"
         android:layout_height="wrap_content"
-        android:id="@+id/username"
-        android:text="@string/Username"
-        android:layout_marginTop="5sp"
-        android:layout_marginStart="20sp"
-        android:layout_centerVertical="true"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:visibility="invisible"
-        android:layout_alignParentStart="true"
-
-        />
-
-    <LinearLayout
-        android:id="@+id/linearpink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/messageboxright"
         >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/showmessage"
-        android:text="@string/message"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="10sp"
-        android:layout_marginStart="20sp"
-        android:layout_centerVertical="true"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/messagetime"
-            android:text="@string/messagetime"
-            android:layout_marginTop="10sp"
-            android:layout_marginStart="150sp"
-            android:layout_marginBottom="8sp"
+            android:id="@+id/username"
+            android:text="@string/Username"
+            android:layout_marginTop="5sp"
+            android:layout_marginStart="20sp"
             android:layout_centerVertical="true"
-            android:textSize="10sp"
+            android:textSize="20sp"
             android:textStyle="bold"
+            android:visibility="invisible"
             android:layout_alignParentStart="true"
 
             />
 
-
-        <ImageView
+        <LinearLayout
+            android:id="@+id/linearpink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/seen"
-            android:visibility="gone"
-            android:layout_marginStart="250sp"
-            android:layout_marginBottom="8sp"
-            android:layout_centerVertical="true"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:layout_alignParentStart="true"
-            android:src="@drawable/ic_seen"
+            android:orientation="vertical"
+            >
 
-            />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/unseen"
-            android:visibility="gone"
-            android:layout_marginStart="250sp"
-            android:layout_marginBottom="8sp"
-            android:layout_centerVertical="true"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:layout_alignParentStart="true"
-            android:src="@drawable/ic_unseen"
-
-            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/showmessage"
+                android:text="@string/message"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginTop="10sp"
+                android:layout_marginStart="20sp"
+                android:layout_centerVertical="true"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                />
 
 
-    </LinearLayout>
+
+            <ImageView
+                android:id="@+id/sentedphoto"
+                android:layout_marginTop="10sp"
+                android:layout_marginStart="10sp"
+                android:layout_width="250sp"
+                android:visibility="gone"
+                android:layout_height="300sp"/>
 
 
-</RelativeLayout>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/messagetime"
+                android:text="@string/messagetime"
+                android:layout_marginTop="10sp"
+                android:layout_marginStart="150sp"
+                android:layout_marginBottom="8sp"
+                android:layout_centerVertical="true"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:layout_alignParentStart="true"
+
+                />
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/seen"
+                android:visibility="gone"
+                android:layout_marginStart="250sp"
+                android:layout_marginBottom="8sp"
+                android:layout_centerVertical="true"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:layout_alignParentStart="true"
+                android:src="@drawable/ic_seen"
+
+                />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/unseen"
+                android:visibility="gone"
+                android:layout_marginStart="250sp"
+                android:layout_marginBottom="8sp"
+                android:layout_centerVertical="true"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:layout_alignParentStart="true"
+                android:src="@drawable/ic_unseen"
+
+                />
+
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
 
 
 
