--- a/app/src/main/res/layout/group_item_left.xml
+++ b/app/src/main/res/layout/group_item_left.xml
@@ -24,39 +24,46 @@
             android:orientation="vertical"
             >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/username"
-            android:fontFamily="@font/novusbold"
-            android:textColor="@color/colorPrimary"
-            android:text="@string/Username"
-            android:layout_marginTop="5sp"
-            android:layout_above="@+id/showmessage"
-            android:layout_marginStart="20sp"
-            android:layout_centerVertical="true"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_alignParentStart="true"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/username"
+                android:fontFamily="@font/novusbold"
+                android:textColor="@color/colorPrimary"
+                android:text="@string/Username"
+                android:layout_marginTop="5sp"
+                android:layout_above="@+id/showmessage"
+                android:layout_marginStart="20sp"
+                android:layout_centerVertical="true"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_alignParentStart="true"
 
-            />
+                />
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/showmessage"
-            android:text="@string/message"
-            android:layout_marginTop="10sp"
-            android:layout_marginStart="20sp"
-            android:layout_marginBottom="8sp"
-            android:layout_centerVertical="true"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_alignParentStart="true"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/showmessage"
+                android:text="@string/message"
+                android:layout_marginTop="10sp"
+                android:layout_marginStart="20sp"
+                android:layout_marginBottom="8sp"
+                android:layout_centerVertical="true"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_alignParentStart="true"
 
-            />
+                />
 
+            <ImageView
+                android:id="@+id/sentedphoto"
+                android:layout_marginStart="10sp"
+                android:layout_marginTop="10sp"
+                android:layout_width="250sp"
+                android:visibility="gone"
+                android:layout_height="300sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -70,6 +77,36 @@
                 android:textSize="10sp"
                 android:textStyle="bold"
                 android:layout_alignParentStart="true"
+
+                />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/seen"
+                android:visibility="gone"
+                android:layout_marginStart="250sp"
+                android:layout_marginBottom="8sp"
+                android:layout_centerVertical="true"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:layout_alignParentStart="true"
+                android:src="@drawable/ic_seen"
+
+                />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/unseen"
+                android:visibility="gone"
+                android:layout_marginStart="250sp"
+                android:layout_marginBottom="8sp"
+                android:layout_centerVertical="true"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:layout_alignParentStart="true"
+                android:src="@drawable/ic_unseen"
 
                 />
 
