--- a/app/src/main/res/layout/activity_group_item.xml
+++ b/app/src/main/res/layout/activity_group_item.xml
@@ -38,6 +38,9 @@
             android:id="@+id/groupname"
             android:fontFamily="@font/novusbold"
             android:textColor="#ffff"
+            android:maxEms="7"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:layout_marginTop="10sp"
             android:layout_marginStart="20sp"
             android:text="@string/Groupname"
